# temporal-engagement-analyzer

./: .gitignore  main.py  pyproject.toml
analyzer/: aggregator.py  file_scanner.py  models.py  slack_parser.py
temporal_engagement_analyzer/: main.py
temporal_engagement_analyzer/analyzer/: models.py  slack_parser.py  time_aggregator.py  visualization.py
