[project]
name = "temporal-engagement-analyzer"
version = "0.1.0"
description = "Analyze community response to messages based on posting time"
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[project.scripts]
temporal-engagement = "main:main"

[dependency-groups]
dev = [
    "mypy>=1.19.1",
    "ruff>=0.15.7",
]
